my-deployment-mounting-from-secret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.4-alpine3.18-slim
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-templates
              mountPath: /etc/nginx/templates
      volumes:
        - name: nginx-templates
          hostPath:
            path: /root/kubernetes-deep-dive/nginx-templates
